# qt-physics-test

./: CMakeLists.txt  README.md  global_config.h  main.cpp  mainwindow.cpp  mainwindow.h  view.cpp  view.h
collision_stuff/: box.cpp  box.h  vector.cpp  vector.h
effects/: blur.cpp  blur.h
items/: ball.cpp  ball.h  line.cpp  line.h  wall.cpp  wall.h
